# src/api/api.go
@@ -71,6 +71,7 @@ func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 		carModelPriceHistories := v1.Group("/car-model-price-histories", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 		carModelImages := v1.Group("/car-model-images", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
 		carModelProperties := v1.Group("/car-model-properties", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin"}))
+		carModelComments := v1.Group("/car-model-comments", middlewares.Authentication(cfg), middlewares.Authorization([]string{"admin", "default"}))
 
 		// Test
 		routers.Health(health)
@@ -100,6 +101,7 @@ func RegisterRoutes(r *gin.Engine, cfg *config.Config) {
 		routers.CarModelPriceHistory(carModelPriceHistories, cfg)
 		routers.CarModelImage(carModelImages, cfg)
 		routers.CarModelProperty(carModelProperties, cfg)
+		routers.CarModelComment(carModelComments, cfg)
 
 		r.Static("/static", "./uploads")
 	}
